# elf-crafter.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inc/: config.hpp  elf_header.hpp  elf_types.hpp  program_header.hpp  relocation_entry.hpp  section.hpp  section_header.hpp  string_table.hpp  stringifier.hpp  symbol_table.hpp  symbol_table_entry.hpp  types.hpp
inc/elf32/: elf32.hpp  forward_declaration.hpp  relocation_entry.hpp  section.hpp  type.hpp  types.hpp  version.hpp
inc/elf32/header/: header.hpp  header_raw.hpp  identification_raw.hpp
inc/elf32/program/: program_header_raw.hpp  segment.hpp
inc/elf32/section/: section.hpp  section_header_raw.hpp  symbol.hpp  symbol_table_entry_raw.hpp  type.hpp
inc/elf32/section_header_table/: section_header.hpp
inc/elf32/string_table/: string_table.hpp
inc/elf32/symbol_table/: symbol_table.hpp  symbol_table_entry.hpp
inc/utility/: compare.hpp  file.hpp  stringifier.hpp
inc/utility/jsonifier/: json_array.hpp  json_string.hpp  json_type.hpp  jsonifier.hpp
inc/utility/lonifier/: lon_array.hpp  lon_bytes.hpp  lon_object.hpp  lon_string.hpp  lon_type.hpp  lonifier.hpp
src/: main.cpp  stringifier.cpp
src/elf32/: elf32.cpp  type.cpp  types.cpp  version.cpp
src/elf32/header/: header.cpp  header_raw.cpp  identification_raw.cpp
src/elf32/program/: program_header_raw.cpp
src/elf32/section/: section.cpp  section_header_raw.cpp  symbol.cpp  symbol_table_entry_raw.cpp  type.cpp
src/utility/: file.cpp  stringifier.cpp
src/utility/lonifier/: lon_array.cpp  lon_bytes.cpp  lon_object.cpp  lon_string.cpp  (+2 more)
(+18 files in other folders)
